--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: "/uploads" # Folder path where uploaded files will be accessed, r
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Post" # Used in the UI
-    folder: "src/posts" # The path to the folder where the documents are stored
+    folder: "src/content/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter.
@@ -21,7 +21,7 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "projects" # Used in routes, e.g., /admin/collections/blog
     label: "Projects" # Used in the UI
-    folder: "src/projects" # The path to the folder where the documents are stored
+    folder: "src/content/projects" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter.
@@ -31,7 +31,7 @@ collections:
       - {label: "Project Link", name: "URL", widget: "string"}
   - name: "media" # Used in routes, e.g., /admin/collections/blog
     label: "Media" # Used in the UI
-    folder: "src/media" # The path to the folder where the documents are stored
+    folder: "src/content/media" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter.
