--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
     "fb": "^2.0.0",
+    "react-scroll-parallax": "^1.3.5",
+    "react-youtube-background": "^0.1.4",
     "semantic-ui-react": "^0.82.5",
     "serve": "^6.1.0"
   }
